feat: add org/project title and cluster name to proto (#351)
