# api/v1/workspace_service.swagger.json
@@ -396,6 +396,15 @@
         "clusterId": {
           "type": "string",
           "description": "cluster_id is the ID of the cluster where the notebook runs."
+        },
+        "organizationTitle": {
+          "type": "string"
+        },
+        "projectTitle": {
+          "type": "string"
+        },
+        "clusterName": {
+          "type": "string"
         }
       }
     },
